--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ section.title {
 span{
     font-family: 'Stoked', sans-serif;
     text-transform: uppercase;
-    color: #00fed8d7 ;
+    color: #00fed8d9 ;
     /* text-shadow: 1px 1px 1px #ffffffe0; */
     font-weight: 300;
 }
@@ -132,12 +132,11 @@ li i{
 }
 
 .title__profile {
-    object-fit: cover;
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    border: 1px solid #02223f;
-    order: 2;
+   
+    border-radius: 2px;
+    width: 450px;
+    height: 300px;
+    border: 1px solid #e4edf5;
 }
 
 .title__container {
@@ -482,31 +481,7 @@ section.academic {
 }
 
 .experiencia__botao--repo {
-    cursor: pointer;
-    padding: 8px;
-    border: none;
-    border-radius: 2px;
-    font-family: var(--texto-normal);
-    background: #454d59;
-    color: var(--titulo);
-    border-bottom: 2px solid var(--texto);
-    font-weight: bold;
-    transition: 1s;
-}
-
-.experiencia__botao--repo:hover {
-    cursor: pointer;
-    padding: 8px;
-    font-family: var(--texto-normal);
-    font-weight: bold;
-    background: #454d59;
-    color: var(--texto);
-    border: none;
-    border-bottom: 2px solid #c8c8c8;
-    transition: 1s;
-}
-
-.experience__botao--demo {
+    text-transform: capitalize;
     cursor: pointer;
     padding: 8px;
     font-family: var(--texto-normal);
@@ -514,20 +489,48 @@ section.academic {
     background: var(--color3);
     color: var(--texto);
     border: none;
-    border-radius: 2px;
-    border-bottom: 2px solid #c8c8c8;
+    border-radius: 10px;
+    border: 1px solid var(--texto);
+    transition: 1s;
+    max-width: 200px;
+}
+
+.experiencia__botao--repo:hover {
+    text-transform: capitalize;
+    cursor: pointer;
+    padding: 8px;
+    font-family: var(--texto-normal);
+    font-weight: bold;
+    background: var(--color3);
+    color: var(--texto);
+    border: none;
+    border-radius: 10px;
+    border: 1px solid var(--titulo);
+    transition: 1s;
+}
+
+.experience__botao--demo {
+    text-transform: capitalize;
+    cursor: pointer;
+    padding: 8px;
+    font-family: var(--texto-normal);
+    font-weight: bold;
+    background: var(--color3);
+    color: var(--texto);
+    border: none;
+    border-radius: 10px;
+    border: 1px solid var(--texto);
     transition: 1s;
 }
 
 .experience__botao--demo:hover {
     cursor: pointer;
-    padding: 9px;
     font-family: var(--texto-normal);
     font-weight: bold;
     background: var(--color3);
     color: var(--texto);
     border: none;
-    border-bottom: 2px solid var(--titulo);
+    border: 1px solid var(--titulo);
     transition: 1s;
 }
 
@@ -543,8 +546,7 @@ section.formcontato {
     /* Sombra superior */
     0 10px 15px -5px rgba(255, 255, 255, 0.064);
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+   
 
 }
 
@@ -557,11 +559,7 @@ section.formcontato {
 
 .formcontato__contacto {
     margin: 40px auto;
-    width: 90%;
-    height: 400px;
     display: flex;
-
-
 }
 
 .formcontato__title {
@@ -576,19 +574,23 @@ section.formcontato {
     display: flex;
     align-items: center;
     flex-direction: column;
-    gap: 20px;
+    gap: 16px;
 }
 
 .part1 {
+    gap: 15px;
     color: var(--texto);
     display: flex;
     justify-content: center;
-    align-items: start;
+    align-items: center;
     flex-direction: column;
+}
+.formcontato__subtext2{
+    text-align: center;
 }
 
 .formcontato__input {
-    width: 100%;
+    width: 60%;
     background: #ffffffec;
     opacity: 90%;
     padding: 7px;
@@ -613,11 +615,10 @@ section.formcontato {
 }
 
 .formcontato__textarea {
-    width: 100%;
+    width: 60%;
     background: #ffffffec;
     opacity: 90%;
     padding: 7px;
-
     border-radius: 6px;
     border: 2px solid #c8c8c8;
     box-shadow: 0 0 80px rgba(0, 0, 0, 0.2);
@@ -628,12 +629,12 @@ section.formcontato {
 .formcontato__textarea::placeholder {
     color: var(--color3);
 }
-
+/* --boton enviar */
 .formcontato__botao {
     cursor: pointer;
-    width: 100%;
+    width: 60%;
     height: 40px;
-    border-radius: 6px;
+    border-radius: 1px;
     font-family: var(--texto-normal);
     font-weight: bold;
     background: var(--color3);
@@ -690,8 +691,8 @@ section.footer {
 
     .title__profile {
 
-        width: 150px;
-        height: 150px;
+        width: 300px;
+        height: 250px;
 
 
     }
