--- a/style.css
+++ b/style.css
@@ -177,8 +177,8 @@ section.about {
 
 /* seccion skills */
 .skills {
-    width: 90%;
-    margin: 60px auto;
+    width: 95%;
+    margin: auto;
 }
 
 .skills__title {
@@ -365,27 +365,6 @@ section.about {
 
 /* Experiencia Académica*/
 
-
-.academic {
-    width: 100%;
-    margin: 40px auto;
-}
-
-.academic__title {
-    color: var(--titulo);
-    font-weight: 700;
-    margin: 50px auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: var(--texto-menu);
-}
-
-section.academic {
-    color: var(--texto);
-
-}
-
 .academic__title {
     color: var(--titulo);
     font-weight: 700;
@@ -394,55 +373,35 @@ section.academic {
     justify-content: center;
     font-family: var(--texto-menu);
 }
-
-.academic__courses {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
 .academic__courses__box {
     width: 300px;
-    height: 300px;
+    min-height: 300px;
     border-radius: 6px;
     background: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(30px);
     border: 2px solid rgba(255, 255, 255, 0.1);
     box-shadow: 0 0 80px rgba(0, 0, 0, 0.2);
-    margin: 20px 40PX;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around; 
     align-items: center;
+    gap: 10px; 
 }
 
-.academic__courses__list {
-    gap: 1px;
-    padding: 0px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
+.academic__courses__box img {
+    max-width: 100%; 
 }
 
-.academic__courses__list .academic__courses__item__title {
-    
+.academic__courses__box .card-body {
+    text-align: center; 
     color: var(--texto);
-    line-height: 2.5;
-    text-align: center;
-    font-weight: 800;
-    font-family: var(--texto-normal);
 }
 
 .academic__courses__box:hover {
     border: 2px solid #fcfcfc;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.43);
 }
-.academic__courses__item__subtitle{
-    font-weight: 600;
-    font-family: var(--texto-normal);
-}
+
 
 /* experiencia*/
 
@@ -699,7 +658,7 @@ section.footer {
     }
 
     .experience__img {
-        height: 140px;
+        height: 135px;
     }
     .academic__courses{
         flex-wrap: nowrap;
@@ -735,13 +694,13 @@ section.footer {
 
     /* sobre mi */
    .about__container{
-    width: 90%;
+    width: 95%;
    }
 
     /*Skills*/
     .skills__box {
-        max-width: 130px;
-        max-height: 130px;
+        max-width: 100px;
+        max-height: 120px;
         font-size: 12px;
     }
 
@@ -809,7 +768,7 @@ section.footer {
 }
 
 /*Mobile*/
-@media (max-width: 426px) {
+@media (max-width: 430px) {
 
     .navbar-brand{
         text-align: center;
@@ -951,7 +910,7 @@ section.footer {
         border: 2px solid gainsboro;
         background: rgba(220, 220, 220, 0.158);
     }
-
+  
     /* li.nv2 {
         display: flex;
         justify-content: flex-start;
@@ -990,7 +949,7 @@ section.footer {
     }
 
     .title__subsection {
-        text-align: left;
+        text-align: center;
         font-size: 18px;
     }
 
@@ -1007,6 +966,7 @@ section.footer {
     /*Sección sobre mi*/
     .about__title{
        text-align: center;
+       margin: 30px auto!important;
     }
     .about__paragraph{
         font-size: 18px;
@@ -1033,6 +993,9 @@ section.footer {
     /*Skills*/
     .skills {
         width: 100%;
+    }
+    .skills__title{
+        margin: 30px auto;
     }
 
     /*Formación Académica*/
@@ -1086,4 +1049,9 @@ section.footer {
     width: 95%;
 }
 
+}
+@media (max-width: 426px) {
+    .experience__img {
+        height: 130px;
+    }
 }
