--- a/style.css
+++ b/style.css
@@ -592,6 +592,7 @@ section.formcontato {
 .formcontato__subtext2{
     font-family: var(--texto-normal);
     line-height: 1.5;
+    width: 50%;
 }
 
 .formcontato__input::placeholder {
